// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FlipbookWidgetFrameRateChanger /> At 12 FPS Should render the toggle bar a third of the way through 1`] = `
<div
  className="FlipbookWidgetFrameRateChanger__fps-selector FlipbookWidgetFrameRateChanger__section"
>
  <div
    className="FlipbookWidgetFrameRateChanger__fps-title"
  >
    Flipbook frame rate
  </div>
  <div
    className="FlipbookWidgetFrameRateChanger__fps-grabber-container"
  >
    <div
      className="FlipbookWidgetFrameRateChanger__fps-grabber"
      style={
        Object {
          "width": "calc(0 / 3 * 100%)",
        }
      }
    >
      <div
        className="FlipbookWidgetFrameRateChanger__fps-grabber-target"
        style={
          Object {
            "left": "calc(-1 / 3 * 100%)",
            "width": "calc(1 / 3 * 100%)",
          }
        }
      >
        <div
          className="FlipbookWidgetFrameRateChanger__fps-grabber-target-circle"
        />
      </div>
    </div>
  </div>
  <div
    className="FlipbookWidgetFrameRateChanger__fps-rate-list"
  >
    <div
      className="FlipbookWidgetFrameRateChanger__fps-rate"
      onClick={[Function]}
    >
      12
       FPS
    </div>
    <div
      className="FlipbookWidgetFrameRateChanger__fps-rate"
      onClick={[Function]}
    >
      24
       FPS
    </div>
    <div
      className="FlipbookWidgetFrameRateChanger__fps-rate"
      onClick={[Function]}
    >
      30
       FPS
    </div>
  </div>
</div>
`;

exports[`<FlipbookWidgetFrameRateChanger /> At 24 FPS Should render the toggle bar half of the way through 1`] = `
<div
  className="FlipbookWidgetFrameRateChanger__fps-selector FlipbookWidgetFrameRateChanger__section"
>
  <div
    className="FlipbookWidgetFrameRateChanger__fps-title"
  >
    Flipbook frame rate
  </div>
  <div
    className="FlipbookWidgetFrameRateChanger__fps-grabber-container"
  >
    <div
      className="FlipbookWidgetFrameRateChanger__fps-grabber"
      style={
        Object {
          "width": "calc(2 / 3 * 100%)",
        }
      }
    >
      <div
        className="FlipbookWidgetFrameRateChanger__fps-grabber-target"
        style={
          Object {
            "left": "calc(1 / 3 * 100%)",
            "width": "calc(1 / 3 * 100%)",
          }
        }
      >
        <div
          className="FlipbookWidgetFrameRateChanger__fps-grabber-target-circle"
        />
      </div>
    </div>
  </div>
  <div
    className="FlipbookWidgetFrameRateChanger__fps-rate-list"
  >
    <div
      className="FlipbookWidgetFrameRateChanger__fps-rate FlipbookWidgetFrameRateChanger__fps-rate--elapsed"
      onClick={[Function]}
    >
      12
       FPS
    </div>
    <div
      className="FlipbookWidgetFrameRateChanger__fps-rate FlipbookWidgetFrameRateChanger__fps-rate--active"
      onClick={[Function]}
    >
      24
       FPS
    </div>
    <div
      className="FlipbookWidgetFrameRateChanger__fps-rate"
      onClick={[Function]}
    >
      30
       FPS
    </div>
  </div>
</div>
`;

exports[`<FlipbookWidgetFrameRateChanger /> At 30 FPS Should render the toggle bar all the way through 1`] = `
<div
  className="FlipbookWidgetFrameRateChanger__fps-selector FlipbookWidgetFrameRateChanger__section"
>
  <div
    className="FlipbookWidgetFrameRateChanger__fps-title"
  >
    Flipbook frame rate
  </div>
  <div
    className="FlipbookWidgetFrameRateChanger__fps-grabber-container"
  >
    <div
      className="FlipbookWidgetFrameRateChanger__fps-grabber"
      style={
        Object {
          "width": "calc(3 / 3 * 100%)",
        }
      }
    >
      <div
        className="FlipbookWidgetFrameRateChanger__fps-grabber-target"
        style={
          Object {
            "left": "calc(2 / 3 * 100%)",
            "width": "calc(1 / 3 * 100%)",
          }
        }
      >
        <div
          className="FlipbookWidgetFrameRateChanger__fps-grabber-target-circle"
        />
      </div>
    </div>
  </div>
  <div
    className="FlipbookWidgetFrameRateChanger__fps-rate-list"
  >
    <div
      className="FlipbookWidgetFrameRateChanger__fps-rate FlipbookWidgetFrameRateChanger__fps-rate--elapsed"
      onClick={[Function]}
    >
      12
       FPS
    </div>
    <div
      className="FlipbookWidgetFrameRateChanger__fps-rate FlipbookWidgetFrameRateChanger__fps-rate--elapsed"
      onClick={[Function]}
    >
      24
       FPS
    </div>
    <div
      className="FlipbookWidgetFrameRateChanger__fps-rate FlipbookWidgetFrameRateChanger__fps-rate--active"
      onClick={[Function]}
    >
      30
       FPS
    </div>
  </div>
</div>
`;
